fix: file upload progress circle not centered

--- a/packages/frontend/src/app/components/new-editor/new-editor.component.scss
+++ b/packages/frontend/src/app/components/new-editor/new-editor.component.scss
@@ -59,7 +59,7 @@
 .below-editor-toolbar-rightside {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   gap: 0.5rem;
   margin-bottom: 0.5rem;
